--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "react-three-fiber": "^5.3.10",
     "three": "^0.124.0",
     "use-cannon": "^0.5.3",
