--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "drei": "^2.2.13",
     "emailjs-com": "^2.6.4",
     "gsap": "^3.5.1",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
